add init method

--- a/examples/index.html
+++ b/examples/index.html
@@ -24,6 +24,7 @@
     </button>
 </div>
 
+<!--somewhere in your code-->
 <div id="id-to-element">
     <span class="ib-iframe-loader">Loading...</span>
 </div>
